Static site generator (WIP)

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,6 @@
 include LICENSE
 include README.rst
 include requirements.txt
-graft page
-recursive-include page/templates *
+graft fpage
+recursive-include fpage/templates *
 
