--- a/setup.cfg
+++ b/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
-name = Pages
-module = pages
+name = Page
+module = page
 version = 0.0.1
-url = https://github.com/fmalina/pages
+url = https://github.com/fmalina/page
 author = F. Malina
 author_email = fmalina@pm.me
-description = Static site generator
+description = Static website generator
 long_description = file: README.md
 long_description_content_type = text/markdown
 license = BSD License
@@ -28,4 +28,4 @@ packages = find:
 
 [options.entry_points]
 console_scripts =
-    pages = pages.gen:cli
+    page = page.gen:cli
