--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
-name = Page
+name = page
 module = page
-version = 0.1.0
+version = 0.1.1
 url = https://github.com/fmalina/page
 author = F. Malina
 author_email = fmalina@pm.me
