--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ classifiers = [
 urls = { "Funding" = "https://unilexicon.com/fm/pay.html" }
 requires-python = ">=3.9"
 dependencies = [
-    "jinja2",
+    "minijinja",
     "markdown2",
     "markupsafe",
     "brotli",
